Version 2.03.02 - 
===================================
  Add pvck --dump option to extract metadata.
  Fix signal delivery checking race in libdaemon (lvmetad).
  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.
  Skip autoactivation for a PV when PV size does not match device size.
  Remove first-pvscan-initialization which should no longer be needed.
  Add remote refresh through lvmlockd/dlm for shared LVs after lvextend.
  Ignore foreign and shared PVs for pvscan online files.
  Add config setting to control fields in debug file and verbose output.
  Add command[pid] and timestamp to debug file and verbose output.
  Fix missing growth of _pmsmare volume when extending _tmeta volume.
  Automatically grow thin metadata, when thin data gets too big.
  Add synchronization with udev before removing cached devices.
  Add support for caching VDO LVs and VDOPOOL LVs.
  Add support for vgsplit with cached devices.
  Query mpath device only once per command for its state.
  Use device INFO instead of STATUS when checking for mpath device uuid.
  Change default io_memory_size from 4 to 8 MiB.
  Add config setting io_memory_size to set bcache size.
  Fix pvscan autoactivation for concurrent pvscans.
  Change scan_lvs default to 0 so LVs are not scanned for PVs.
  Thin-pool selects power-of-2 chunk size by default.
  Cache selects power-of-2 chunk size by default.
  Support reszing for VDOPoolLV and VDOLV.
  Improve -lXXX%VG modifier which improves cache segment estimation.
  Ensure migration_threshold for cache is at least 8 chunks.
  Restore missing man info lvcreate --zero for thin-pools.
  Drop misleadning comment for metadata minimum_io_size for VDO segment.
  Add device hints to reduce scanning.
  Introduce LVM_SUPPRESS_SYSLOG to suppress syslog usage by generator.
  Fix generator quering lvmconfig unpresent config option.
  Fix memleak on bcache error path code.
  Fix missing unlock on lvm2 dmeventd plugin error path initialization.